@@ -1,4 +1,5 @@
 # -*- coding: utf-8 -*-
+"""Overview"""
 # Copyright (c) 2011 University of Jyväskylä and Contributors.
 #
 # All Rights Reserved.
@@ -17,7 +18,7 @@ import os
 
 from zope.publisher.browser import BrowserView
 
-from sauna.reload import forkloop, reload_paths
+from sauna.reload import autoinclude, forkloop, reload_paths
 from sauna.reload.forkloop import CannotSpawnNewChild
 from sauna.reload.utils import logger
 
@@ -25,16 +26,38 @@ from sauna.reload.utils import logger
 class SaunaReload(BrowserView):
 
     def __call__(self):
-
-        self.reload_paths = reload_paths
         self.forkloop = forkloop
-        if self.request.get("fork", False):
+        if self.request.get('fork', False):
             try:
                 self.forkloop.spawnNewChild()
             except CannotSpawnNewChild as e:
                 logger.error(str(e.args[0]))
-
         return self.index()
+
+    def getConfigurationContext(self):
+        try:
+            from Zope2.App.zcml import _context as configuration_context
+            configuration_context  # pyflakes
+        except ImportError:
+            from Products.Five.zcml import _context as configuration_context
+        return configuration_context
+
+    def getSaunaReloadPath(self):
+        import sauna.reload
+        return os.path.dirname(sauna.reload.__file__)
+
+    def getDeferredZCMLs(self):
+        cfgContext = self.getConfigurationContext()
+        sauna_reload = self.getSaunaReloadPath()
+
+        values = []
+        cwd = os.getcwd() + os.path.sep
+        for zcml in getattr(cfgContext, '_seen_files', ()):
+            if zcml in reload_paths\
+                and zcml not in autoinclude.FAILED_TO_DEFER:
+                if not zcml.startswith(sauna_reload):
+                    values.append(zcml.replace(cwd, ''))
+        return values
 
     def getChildPid(self):
         return os.getpid()
