@@ -161,6 +161,7 @@ class ForkLoop(object):
 
         self.forking = False
 
+        logger.logDeferred()
         logger.logDeferredErrors()
 
         logger.info("Booted up new child in %s seconds. PID %i" % (
